continue navbar and start promo

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,12 @@
     <meta property="twitter:description" content="Дом лучшей еды!">
     <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 
+    <!-- favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="icons/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon/favicon-16x16.png">
+    <link rel="manifest" href="icons/favicon/site.webmanifest">
+
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="css/style.min.css">
@@ -45,24 +51,30 @@
                                 <a href="#" class="header__links-text">МЕНЮ</a>
                                 <a href="#" class="header__links-text">О НАС</a>
                                 <a href="#" class="header__links-text">БРОНЬ</a>
-                                <img src="icons/main/cart.png" alt=""><a href=""></a></img>
+                                <img src="icons/main/cart.png" alt="cart"></img>
                                 <div class="header__divider"></div>
                             </div>
                         </div>
                         <div class="header__item">
                             <div class="header__phone">
                                 <img src="icons/main/phone.png" alt="phone"><a href="">+999-888-76-54</a></img>
-                                <div class="header__phone-text">Свяжитесь с нами для 
+                                <div class="header__phone-text">Свяжитесь с нами для <br>
                                     бронирования</div>
                             </div>
                         </div>
                         <div class="header__item">
-                            <div class="header__button"></div>
+                            <div class="button header__button">Заказ столика</div>
                         </div>
                     </div>
                 </div>
             </div>
         </nav>
     </header>
+
+    <section class="promo">
+        <div class="container">
+
+        </div>
+    </section>
 </body>
 </html>
