complete navbar and promo

--- a/src/index.html
+++ b/src/index.html
@@ -40,9 +40,7 @@
             <div class="container">
                 <div class="header">
                     <div class="header__logo">
-                        <img src="icons/main_logo.png" alt="logo">
-                        <a href="#"></a>
-                        </img>
+                        <img src="icons/main_logo.png" alt="logo"></img>
                     </div>
                     <div class="header__wrapper">
                         <div class="header__item">
@@ -73,7 +71,31 @@
 
     <section class="promo">
         <div class="container">
-
+            <h1 class="promo__title">Добро пожаловать в</h1>
+            <h2 class="promo__subtitle">Наш ресторан</h2>
+            <div class="promo__descr">
+                <div class="promo__divider"></div>
+                <div class="promo__descr-text">Дом лучшей еды</div>
+                <div class="promo__divider"></div>
+            </div>
+            <div class="button promo__button">VIEW MENU</div>
+            <div class="promo__banners">
+                <div class="promo__item">
+                    <img src="icons/main/cap.png" alt="cap">
+                    <div class="promo__item-title">Магическая <span>Атмосфера</span></div>
+                    <div class="promo__item-descr">В нашем заведении царит магическая атмосфера наполненная вкусными ароматами</div>
+                </div>
+                <div class="promo__item">
+                    <img src="icons/main/cap.png" alt="cap">
+                    <div class="promo__item-title">Лучшее качество <span>Еды</span></div>
+                    <div class="promo__item-descr">Качество нашей<br> Еды - отменное!</div>
+                </div>
+                <div class="promo__item">
+                    <img src="icons/main/cap.png" alt="cap">
+                    <div class="promo__item-title">Недорогая <span>Еда</span></div>
+                    <div class="promo__item-descr">Стоимость нашей Еды зависит только от ее количества. Качество всегда на высоте!</div>
+                </div>
+            </div>
         </div>
     </section>
 </body>
