--- a/src/index.html
+++ b/src/index.html
@@ -98,5 +98,64 @@
             </div>
         </div>
     </section>
+
+    <section class="history">
+        <div class="container">
+            <div class="history__block">
+                <div class="history__wrapper">
+                    <div class="history__title">Наша <span>История</span></div>
+                    <div class="history__descr">Как и у любого другого самобытного места, у нас есть своя, особая история. Идея ресторана пришла основателям неожиданно. Во время прогулки по лесу создатель нашего ресторана застрял в сотнях километров от ближайшего населенного пункта. Вдали от цивилизации и связи им пришлось навремя обустровать себе нехитрый быт, добывать и готовить себе еду.</div>
+                    <div class="history__item">
+                        <div class="history__item-text">
+                            <div class="history__item-count">93<br> <span>Напитки</span></div>
+                        </div>
+                        <div class="history__item-text">
+                            <div class="history__item-count">206<br> <span>Еда</span></div>
+                        </div>
+                        <div class="history__item-text">
+                            <div class="history__item-count">71<br> <span>Закуски</span></div>
+                        </div>
+                    </div>
+                </div>    
+            <img src="img/images.png" alt="images">  
+            </div>      
+        </div>
+    </section>
+
+    <section class="order">
+        <div class="container">
+            <div class="order__wrapper">
+                <div class="order__item">
+                    <div class="order__title">Отпразднуйте в одном из<br>
+                        самых лучших ресторанов.</div>
+                    <div class="order__subtitle">Только в этом месяце бизнес-ланч от 250 ₽</div>
+                </div>
+                <div class="button order__button">заказ столика</div>
+            </div>
+        </div>
+    </section>
+
+    <section class="catalog">
+        <div class="container">
+            <div class="catalog__title">Наши <span>блюда</span></div>
+            <div class="catalog__wrapper">
+                <img src="img/menu/pizza.jpg" alt="pizza" class="catalog__img">
+                <div class="catalog__block">
+                    <div class="catalog__item">
+                        <img src="img/menu/mini_hamburger.jpg" alt="hamburger">
+                        <div class="catalog__price">Гамбургер мини <span></span>220 Р</div>
+                    </div>
+                    <div class="catalog__item">
+                        <img src="img/menu/mini_hamburger.jpg" alt="hamburger">
+                        <div class="catalog__price">Гамбургер мини <span></span>220 Р</div>
+                    </div>
+                    <div class="catalog__item">
+                        <img src="img/menu/mini_hamburger.jpg" alt="hamburger">
+                        <div class="catalog__price">Гамбургер мини <span></span>220 Р</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
