--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
     <link rel="manifest" href="icons/favicon/site.webmanifest">
 
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -157,5 +158,82 @@
             </div>
         </div>
     </section>
+
+    <section class="menu">
+        <div class="container">
+            <div class="menu__title">Наше меню</div>
+            <div class="menu__wrapper">
+                <div class="menu__item">
+                    <div class="menu__recommend">RECOMMENDED</div>
+                    <img src="img/menu/hamburger.png" alt="hamburger">
+                    <div class="menu__price">420</div>
+                    <div class="menu__subtitle">Гамбургер макси</div>
+                    <div class="menu__descr">Максимально толстый<br> 
+                        слой мяса</div>
+                    <div class="button menu__button">ЗАКАЗАТЬ</div>
+                </div>
+                <div class="menu__item">
+                    <img src="img/menu/hamburger.png" alt="hamburger">
+                    <div class="menu__price">420</div>
+                    <div class="menu__subtitle">Гамбургер макси</div>
+                    <div class="menu__descr">Максимально толстый <br>
+                        слой мяса</div>
+                    <div class="button menu__button">ЗАКАЗАТЬ</div>
+                </div>
+                <div class="menu__item">
+                    <img src="img/menu/hamburger.png" alt="hamburger">
+                    <div class="menu__price">420</div>
+                    <div class="menu__subtitle">Гамбургер макси</div>
+                    <div class="menu__descr">Максимально толстый<br> 
+                        слой мяса</div>
+                    <div class="button menu__button">ЗАКАЗАТЬ</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="review">
+        <div class="container">
+            <div class="review__inner">
+                <div>
+                    <div class="review__descr">Я надолго запомню мой День рождения, проведённый в этом ресторане! Кусочек родной Армении!!! Отдельное спасибо за комплепент в виде фруктовой тарелки. Будем рекомендовать этот ресторан своим друзьям и родственникам также за рубежом, путешествующих в Санкт-Петербург!!!</div>
+                    <img src="img/photo.png" alt="photo" class="review__photo">
+                    <div class="review__title">Посетитель</div>
+                    <div class="review__subtitle">Николай</div>
+                </div>
+                <div>
+                    <div class="review__descr">Я надолго запомню мой День рождения, проведённый в этом ресторане! Кусочек родной Армении!!! Отдельное спасибо за комплепент в виде фруктовой тарелки. Будем рекомендовать этот ресторан своим друзьям и родственникам также за рубежом, путешествующих в Санкт-Петербург!!!</div>
+                    <img src="img/photo.png" alt="photo" class="review__photo">
+                    <div class="review__title">Посетитель</div>
+                    <div class="review__subtitle">Николай</div>
+                </div>
+                <div>
+                    <div class="review__descr">Я надолго запомню мой День рождения, проведённый в этом ресторане! Кусочек родной Армении!!! Отдельное спасибо за комплепент в виде фруктовой тарелки. Будем рекомендовать этот ресторан своим друзьям и родственникам также за рубежом, путешествующих в Санкт-Петербург!!!</div>
+                    <img src="img/photo.png" alt="photo" class="review__photo">
+                    <div class="review__title">Посетитель</div>
+                    <div class="review__subtitle">Николай</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="gallery">
+        <div class="container">
+            <div class="gallery__title">Галерея <span>Блюд</span></div>
+            <div class="gallery__wrapper">
+                <a href="#" class="gallery__works first"><img src="img/gallery/glasses.jpg" alt="glasses"></a>
+                <a href="#" class="gallery__works"><img src="img/gallery/coffee.jpg" alt="coffee"></a>
+                <a href="#" class="gallery__works"><img src="img/gallery/soup.jpg" alt="soup"></a>
+                <a href="#" class="gallery__works"><img src="img/gallery/coffee.jpg" alt="coffee"></a>
+                <a href="#" class="gallery__works"><img src="img/gallery/soup.jpg" alt="soup"></a>
+                <a href="#" class="gallery__works second"><img src="img/gallery/glasses.jpg" alt="glasses"></a>
+            </div>
+        </div>
+    </section>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+    <script src="js/script.js"></script>
 </body>
+
+
 </html>
