make sec and footer

--- a/src/index.html
+++ b/src/index.html
@@ -231,6 +231,33 @@
         </div>
     </section>
 
+    <section class="cooks">
+        <div class="container">
+            <div class="cooks__title">Наши <span>повара</span></div>
+            <div class="cooks__wrapper">
+                <div class="cooks__item">
+                    <a href="#" class="cooks__photo"><img src="img/cocks/Maria.jpg" alt="photo"></a>
+                    <div class="cooks__item-text">МАРИЯ - стаж работы <span>5 лет</span></div>
+                </div>
+                <div class="cooks__item">
+                    <a href="#" class="cooks__photo"><img src="img/cocks/Alex.jpg" alt="photo"></a>
+                    <div class="cooks__item-text">АЛЕКСАНДР - стаж работы <span>15 лет</span><br>
+                    Шеф - повар на протяжении <span>5 лет</span></div>
+                </div>
+                <div class="cooks__item">
+                    <a href="#" class="cooks__photo"><img src="img/cocks/Mihail.jpg" alt="photo"></a>
+                    <div class="cooks__item-text">МИХАИЛ - стаж работы <span>11 лет</span></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="container">
+
+        </div>
+    </footer>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script src="js/script.js"></script>
 </body>
