--- a/src/index.html
+++ b/src/index.html
@@ -214,6 +214,8 @@
                     <div class="review__subtitle">Николай</div>
                 </div>
             </div>
+            <button type="button" class="prev"><img src="icons/arrow/left.png" alt="left"></button>
+            <button type="button" class="next"><img src="icons/arrow/right.png" alt="right"></button>
         </div>
     </section>
 
@@ -242,7 +244,7 @@
                 <div class="cooks__item">
                     <a href="#" class="cooks__photo"><img src="img/cocks/Alex.jpg" alt="photo"></a>
                     <div class="cooks__item-text">АЛЕКСАНДР - стаж работы <span>15 лет</span><br>
-                    Шеф - повар на протяжении <span>5 лет</span></div>
+                    </div>
                 </div>
                 <div class="cooks__item">
                     <a href="#" class="cooks__photo"><img src="img/cocks/Mihail.jpg" alt="photo"></a>
