make footer try replace review

--- a/src/index.html
+++ b/src/index.html
@@ -195,7 +195,13 @@
     <section class="review">
         <div class="container">
             <div class="review__inner">
-                <div>
+                <div class="review__item">
+                    <div class="review__descr active">Я надолго запомню мой День рождения, проведённый в этом ресторане! Кусочек родной Армении!!! Отдельное спасибо за комплепент в виде фруктовой тарелки. Будем рекомендовать этот ресторан своим друзьям и родственникам также за рубежом, путешествующих в Санкт-Петербург!!!</div>
+                    <img src="img/photo.png" alt="photo" class="review__photo">
+                    <div class="review__title">Посетитель</div>
+                    <div class="review__subtitle">Николай</div>
+                </div>
+                <!-- <div>
                     <div class="review__descr">Я надолго запомню мой День рождения, проведённый в этом ресторане! Кусочек родной Армении!!! Отдельное спасибо за комплепент в виде фруктовой тарелки. Будем рекомендовать этот ресторан своим друзьям и родственникам также за рубежом, путешествующих в Санкт-Петербург!!!</div>
                     <img src="img/photo.png" alt="photo" class="review__photo">
                     <div class="review__title">Посетитель</div>
@@ -206,16 +212,8 @@
                     <img src="img/photo.png" alt="photo" class="review__photo">
                     <div class="review__title">Посетитель</div>
                     <div class="review__subtitle">Николай</div>
-                </div>
-                <div>
-                    <div class="review__descr">Я надолго запомню мой День рождения, проведённый в этом ресторане! Кусочек родной Армении!!! Отдельное спасибо за комплепент в виде фруктовой тарелки. Будем рекомендовать этот ресторан своим друзьям и родственникам также за рубежом, путешествующих в Санкт-Петербург!!!</div>
-                    <img src="img/photo.png" alt="photo" class="review__photo">
-                    <div class="review__title">Посетитель</div>
-                    <div class="review__subtitle">Николай</div>
-                </div>
+                </div> -->
             </div>
-            <button type="button" class="prev"><img src="icons/arrow/left.png" alt="left"></button>
-            <button type="button" class="next"><img src="icons/arrow/right.png" alt="right"></button>
         </div>
     </section>
 
@@ -256,7 +254,20 @@
 
     <footer class="footer">
         <div class="container">
-
+            <div class="footer__card">
+                <img src="img/footer/wine_card.jpg" alt="wine_card" class="footer__wine">
+                <img src="img/footer/wine_card2.jpg" alt="wine_card" class="footer__wine">
+            </div>
+            <div class="footer__address">
+                <a href="#">681003, г. Комсомольск-на-Амуре, пр. Ленина 58</a>
+            </div>
+            <div class="footer__social">
+                <a href="#" class="footer__link"><img src="icons/social/facebook.svg" alt="facebook"></a>
+                <a href="#" class="footer__link"><img src="icons/social/twitter.svg" alt="twitter"></a>
+                <a href="#" class="footer__link"><img src="icons/social/instagram.svg" alt="instagram"></a>
+                <a href="#" class="footer__link"><img src="icons/social/whatsapp.svg" alt="whatsapp"></a>
+            </div>
+         
         </div>
     </footer>
 
