rework menu and footer

--- a/src/index.html
+++ b/src/index.html
@@ -161,7 +161,7 @@
 
     <section class="menu">
         <div class="container">
-            <div class="menu__title">Наше меню</div>
+            <div class="menu__title">Наше <span>меню</span></div>
             <div class="menu__wrapper">
                 <div class="menu__item">
                     <div class="menu__recommend">RECOMMENDED</div>
